// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Fab > Fab advanceVue demo works fine 1`] = `
<div
  class="t-fab"
  style="right: 16px; bottom: 32px;"
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--round t-fab__button"
    role="button"
    type="button"
  >
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      style="font-size: 24px;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M13 4v7h7v2h-7v7h-2v-7H4v-2h7V4h2z"
        fill="currentColor"
      />
    </svg>
    <span
      class="t-button__content"
    >
      
      按钮文字
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Fab > Fab baseVue demo works fine 1`] = `
<div
  class="t-fab"
  style="right: 16px; bottom: 32px;"
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--circle t-fab__button"
    role="button"
    type="button"
  >
    <svg
      class="t-icon t-icon-add"
      fill="none"
      height="1em"
      style="font-size: 24px;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M13 4v7h7v2h-7v7h-2v-7H4v-2h7V4h2z"
        fill="currentColor"
      />
    </svg>
    <span
      class="t-button__content"
    >
      
      
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Fab > Fab mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-38a07a02=""
>
  <h1
    class="title"
    data-v-38a07a02=""
  >
    Fab 悬浮按钮
  </h1>
  <p
    class="summary"
    data-v-38a07a02=""
  >
    当功能使用图标即可表示清楚时，可使用纯图标悬浮按钮，例如：添加、发布。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-38a07a02=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        纯图标悬浮按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        data-v-38a07a02=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          纯图标悬浮按钮
          
        </span>
        <!---->
      </button>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-38a07a02=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        图标加文字悬浮按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        data-v-38a07a02=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          图标加文字悬浮按钮
          
        </span>
        <!---->
      </button>
      
    </div>
  </div>
  <div
    class="t-fab"
    data-v-38a07a02=""
    style="right: 16px; bottom: 32px;"
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--circle t-fab__button"
      role="button"
      type="button"
    >
      <svg
        class="t-icon t-icon-add"
        fill="none"
        height="1em"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M13 4v7h7v2h-7v7h-2v-7H4v-2h7V4h2z"
          fill="currentColor"
        />
      </svg>
      <span
        class="t-button__content"
      >
        
        
        
      </span>
      <!---->
    </button>
  </div>
  <!--v-if-->
</div>
`;
